fix text color button mobile

--- a/src/main.css
+++ b/src/main.css
@@ -33,8 +33,8 @@
 }
 
 .btn-custom-mobile:hover {
-  background-color: #ffffff;
-  color: #2d90dc;
+  background-color: #1e293b;
+  color: #ffffff;
   transition-delay: 0.1s;
 }
 
